# product_network

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
core/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
goods/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
goods/migrations/: 0001_initial.py
product_network/: asgi.py  settings.py  urls.py  wsgi.py
